--- a/uci-sails/package.json
+++ b/uci-sails/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bcrypt": "^0.8.6",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
@@ -21,7 +22,9 @@
     "include-all": "~0.1.6",
     "rc": "1.0.1",
     "sails": "~0.12.3",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "sails-factory": "^0.4.0",
+    "sails-postgresql": "^0.12.1"
   },
   "scripts": {
     "debug": "node debug app.js",
