--- a/uci-sails/package.json
+++ b/uci-sails/package.json
@@ -20,11 +20,13 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
+    "npm-check-updates": "^2.6.4",
     "rc": "1.0.1",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.9",
     "sails-factory": "^0.4.0",
-    "sails-postgresql": "^0.12.1"
+    "sails-postgresql": "^0.12.1",
+    "sails-redis": "^0.10.7"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -36,5 +38,7 @@
     "url": "git://github.com/Jeffrey/uci-sails.git"
   },
   "author": "Jeffrey",
+  "contributors": [{"name": "Jeffrey"},
+                 {"name": "Charles"}],
   "license": ""
 }
