--- a/uci-sails/package.json
+++ b/uci-sails/package.json
@@ -6,22 +6,23 @@
   "keywords": [],
   "dependencies": {
     "bcrypt": "^0.8.6",
-    "ejs": "2.3.4",
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-coffee": "0.13.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-copy": "0.5.0",
-    "grunt-contrib-cssmin": "0.9.0",
-    "grunt-contrib-jst": "0.6.0",
-    "grunt-contrib-less": "1.1.0",
-    "grunt-contrib-uglify": "0.7.0",
-    "grunt-contrib-watch": "0.5.3",
+    "ejs": "2.4.1",
+    "grunt": "1.0.1",
+    "grunt-contrib-clean": "1.0.0",
+    "grunt-contrib-coffee": "1.0.0",
+    "grunt-contrib-concat": "1.0.1",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-cssmin": "1.0.1",
+    "grunt-contrib-jst": "1.0.0",
+    "grunt-contrib-less": "1.3.0",
+    "grunt-contrib-uglify": "1.0.1",
+    "grunt-contrib-watch": "1.0.0",
     "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.2.4",
+    "grunt-sync": "0.5.2",
     "include-all": "~0.1.6",
     "npm-check-updates": "^2.6.4",
-    "rc": "1.0.1",
+    "passport": "^0.3.2",
+    "rc": "1.1.6",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.9",
     "sails-factory": "^0.4.0",
@@ -38,7 +39,13 @@
     "url": "git://github.com/Jeffrey/uci-sails.git"
   },
   "author": "Jeffrey",
-  "contributors": [{"name": "Jeffrey"},
-                 {"name": "Charles"}],
+  "contributors": [
+    {
+      "name": "Jeffrey"
+    },
+    {
+      "name": "Charles"
+    }
+  ],
   "license": ""
 }
