--- a/uci-sails/package.json
+++ b/uci-sails/package.json
@@ -22,6 +22,7 @@
     "include-all": "~0.1.6",
     "npm-check-updates": "^2.6.4",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rc": "1.1.6",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.9",
